# genesis

./: .gitignore  LICENSE  README.md  emulator.py  fs.img  run.bat  run.sh  translator.py
assembler/: assembler.py
blog/: arch.md  boot.md  intro.md  memlay.md  proc.md
compiler/: CompilationEngine.py  JackCompiler.py  JackTokenizer.py  JackType.py
course/: README.md
course/01/: And.hdl  Mux8Way16.hdl
course/02/: FullAdder.hdl  HalfAdder.hdl
course/06/: Makefile
coursework/project6/: assembler
coursework/project7/: .makefile.swp  CodeWriter.cpp  Parser.h  Test.vm  VMTranslator.cpp  makefile  vm_translator  vm_translator.cpp
docs/: NOTES.md  TODO.md  architecture.md  boot.md  errors.md  file-system.md  fs.md  interrupts.md  intr.md  intro.md  memlay.md  memory.md  notes.md  processes.md  style-guide.md  todo.md  troubleshooting.md
emulator/: Makefile  a.out  emu.py  emulator.py  new.cc  old.py
emulator/cc/: Makefile  main.cc
emulator/rust/: Cargo.toml
emulator/rust/src/: lib.rs  main.rs  main.rs2
extended/: README.md  asm.py  assembler.py  build.sh  cpu_emulator.py  emu.py  emulator.py  translator.py  vm_translator.py
future/: asm.py  vm.py
kernel/: .Memory.jack.swp  Disk.jack  Filesystem.jack  Japanese.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Paging.jack  Process.jack  Screen.jack  String.jack  Sys.jack
pong/: PongGame.jack
projects/: README.md
tests/: Main.jack
tools/: compiler1_test.sh
user/: Main.jack
userland/: Chip8.jack  GUI.jack  Japanese.jack  Main.jack  Shell.jack  TextEditor.jack  Vim.jack
vm/: vm.py
(+177 files in other folders)
